2003-06-20  Akim Demaille  <akim@epita.fr>

	* config/config.guess, config/config.sub, config/elisp-comp,
	* config/install-sh, config/mkinstalldirs, doc/standards.texi:
	Update from masters.

2003-06-11  Paolo Bonzini  <bonzini@gnu.org>

	* doc/autoconf.texi (Writing testsuite.at): Document AT_XFAIL_IF
	* lib/autotest/general.m4 (AT_XFAIL_IF): New macro.
	(TEST_SCRIPT): New diversion.
	(AT_SETUP): Divert output to TEST_SCRIPT and move some code...
	(AT_CLEANUP): ...to here.  Undivert TEST_SCRIPT.
	(AT_INIT): Support for expected failures.

2003-06-02  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in, bin/autoscan.in, bin/autoheader.in: White space
	changes.
	* lib/Autom4te/General.pm (&backname): Remove, no longer used by
	Autoconf nor Automake.
	(&contents): New, from Automake.
	PODify.

2003-05-28  Paul Eggert  <eggert@twinsun.com>

	* NEWS, doc/autoconf.texi (Particular Functions),
	lib/autoconf/functions.m4 (AC_FUNC_MKTIME): Check that mktime
	is the inverse of localtime.

2003-05-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Autom4te/General.pm (END): Print diagnostics to STDERR.
	(handle_exec_errors): New function.  Work around $! being
	altered by WEXITSTATUS.
	(xqx, xsystem): Use handle_exec_errors.

2003-05-23  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Autom4te/General.pm (END): Rewrite exit code processing.
	Do not call `_exit()', simply modify `$?'.
	(xsystem): Reset $! before running system, and check it afterward.
	* tests/tools.at (autoupdating AC_PREREQ): Expect exit status
	63 for version mismatches.

2003-05-23  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/status.m4: Prefer "TAB-SP" to "SP-TAB", because of
	Emacs' dangerous whitespace.el behavior (smashing "useless" spaces in
	the middle of a line).
	* lib/m4sugar/m4sugar.m4: Likewise.
	Remove useless spaces in comments.

2003-05-23  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sugar.m4 (m4_version_prereq): Failure causes an
	exit 63, so that we (or Automake's "missing") can tell the